# Naisu-One

./: .gitignore  .gitmodules  BACKEND_REWRITE_PLAN.md  GASLESS_INTENT_SYSTEM_RESEARCH.md  HANDOFF.md  IMPLEMENTATION.md  PITCH_DECK_OUTLINE.md  PROGRESS_SUMMARY.md  README.md  SOLANA_DEFI_INTEGRATION.md  SOLVER_ARCHITECTURE_RESEARCH.md  SOLVER_NETWORK_PLAN.md  research_plan.md  rfq_exclusivity_upgrade.md
.github/workflows/: README.md  deploy-agent-hub.yml  deploy-agent-infra.yml  deploy-naisu-backend.yml  deploy-naisu1-fe.yml
agent-hub/: .env  .env.example  bun.lockb  index.html  package-lock.json  tailwind.config.ts
agent-hub/api/: _auth.ts  admin-proxy.ts
agent-hub/api/auth/: login.ts  logout.ts  me.ts
agent-hub/src/: App.tsx  index.css  vite-env.d.ts
agent-hub/src/components/: AppSidebar.tsx  DashboardLayout.tsx  StatCard.tsx
agent-hub/src/pages/: Agents.tsx  ApiKeys.tsx  Chat.tsx  Dashboard.tsx  KnowledgeBase.tsx  Login.tsx  Projects.tsx  Tools.tsx
agent-hub/src/services/: adminApi.ts  authApi.ts
agent-infra-langchain-ts/: package-lock.json  package.json
agent-infra-langchain-ts/projects/: naisu1.md
agent-infra-langchain-ts/src/: server.ts
agent-infra-langchain-ts/src/agent/: runtime.ts
agent-infra-langchain-ts/src/agents/: service.ts  types.ts
agent-infra-langchain-ts/src/api/: agent-schemas.ts  project-schemas.ts
agent-infra-langchain-ts/src/config/: env.ts
e2e/: .env.example  package-lock.json  package.json  run.js
e2e/lib/: eip712.js  http.js  sse.js
naisu-agent/: .env.example  .gitignore  README.md  package.json  postman-collection.json  postman-environment.json  tsconfig.json
naisu-agent/projects/: nesu.md
naisu-agent/src/: server.ts
naisu-agent/src/agent/: runtime.ts  (+4 more)
naisu-backend/: .env.example  package.json  pnpm-lock.yaml
naisu-backend-rs/: .env  Cargo.toml  smoke_test.sh
naisu-backend-rs/.sqlx/: query-5c480b6d04c54041e9fdf58deaf875d97c52a879cde734a3c749fc27a916989f.json  query-82888c0ba7f549f014eba6572be7fb4293e1499f08e7d6617df0d5295b0ed97f.json  query-a3c2208f93780956c905d7f578d731ce96de46bca3e6a68e592a193e1a264092.json  query-a9658df15ee467ed4b197327eca7c77a3cc4d09f23ca4f7224eb5c0a2417cada.json  query-beaa2c897f382340275233eb1d1347499e6a1ea23852f55525e989105fcf1b94.json  query-c89a108526cc7319714a6a03ea8ad12e3a66b22a41100120a1c0e68095dceffe.json
naisu-backend-rs/migrations/: 0001_initial.down.sql  0001_initial.up.sql
naisu-backend-rs/src/: main.rs  routes.rs  state.rs
naisu-backend-rs/src/feature/: mod.rs
naisu-backend-rs/src/feature/intent/: eip712.rs  events.rs  handlers.rs  mod.rs  model.rs  orderbook.rs  price.rs  routes.rs  sse.rs  store.rs
naisu-backend-rs/src/feature/portfolio/: mod.rs
naisu-backend-rs/src/feature/solver/: auction.rs  handlers.rs  mod.rs  model.rs  registry.rs  routes.rs  ws.rs
naisu-backend-rs/src/feature/yield_rates/: mod.rs
naisu-backend-rs/src/infrastructure/: config.rs  mod.rs  server.rs
naisu-backend-rs/src/infrastructure/db/: intent_repo.rs  mod.rs  pool.rs
naisu-backend-rs/src/infrastructure/indexer/: evm.rs
naisu-backend-rs/src/infrastructure/web/: cors.rs
naisu-backend/scripts/: test-gasless.ts
naisu-backend/src/: index.ts
naisu-contracts/evm/: foundry.toml
naisu-contracts/solana/: Anchor.toml  Makefile  package-lock.json  package.json  tsconfig.json
naisu-contracts/solana/programs/intent-bridge-solana/: Cargo.toml
naisu-contracts/solana/programs/intent-bridge-solana/src/: constants.rs  error.rs  lib.rs
naisu-contracts/solana/programs/intent-bridge-solana/src/instructions/: register_emitter.rs  solve_and_prove.rs
naisu-contracts/sui/: Move.toml  register_evm_emitter.sh
naisu-frontend/: .env.example  .gitignore  App.tsx  MIGRATION_HANDOFF.md  MIGRATION_PLAN.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
naisu-frontend/components/: ActiveIntents.tsx  Navbar.tsx  SolverAuctionCard.tsx
naisu-frontend/hooks/: useAgent.ts  useCreateOrder.ts  useIntentOrders.ts  useIntentQuote.ts  useOrderWatch.ts  usePortfolio.ts  useYieldRates.ts
naisu-frontend/lib/: constants.ts
naisu-frontend/pages/: AgentPage.tsx  IntentPage.tsx  LandingPage.tsx  PortfolioPage.tsx  SwapPage.tsx
naisu-frontend/src/: App.tsx  index.css  index.tsx  main.tsx  routeTree.gen.ts  vite-env.d.ts
naisu-program/: Anchor.toml
naisu-program/tests/: naisu1-program.ts
naisu-solver/: .env.example  Cargo.toml  test_addr.rs  test_gas.rs  test_json.rs  test_parse.rs  test_sui_rpc_timeout.rs
naisu-solver/.claude/: settings.local.json
naisu-solver/src/: config.rs  coordinator.rs  lib.rs  main.rs  strategy.rs  wormhole.rs
naisu-solver/src/chains/: evm_listener.rs  solana_listener.rs  sui_listener.rs
naisu-solver/src/executor/: evm_executor.rs  mod.rs  solana_executor.rs  sui_executor.rs
naisu-solver/src/tui/: app.rs  mod.rs  tracing_layer.rs
naisu1-contracts/solana/: Anchor.toml  Makefile
naisu1-contracts/solana/programs/mock-staking/: Cargo.toml
naisu1-contracts/solana/programs/mock-staking/src/: lib.rs
naisu1-contracts/sui/: Published.toml  deploy_with_emitters.sh
naisu1-fe/: .env.example  App.tsx  index.tsx  metadata.json  package-lock.json  package.json  vite.config.ts
naisu1-fe-bridge/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
naisu1-fe-bridge/src/: index.css  main.tsx  routeTree.gen.ts
naisu1-fe/components/: ActiveIntents.tsx  Navbar.tsx
naisu1-fe/hooks/: useAgent.ts  useIntentOrders.ts  useOpenClaw.ts  useSolanaAddress.ts  useSwapBuild.ts  useTokenBalance.ts
naisu1-fe/lib/: abi.ts  constants.ts
naisu1-fe/pages/: AgentPage.tsx  IntentPage.tsx
naisu1-program/: Anchor.toml
naisu1-program/programs/mock-liquid-staking/: Cargo.toml
naisu1-program/programs/mock-liquid-staking/src/: lib.rs
naisu1-program/programs/mock-swap-pool/: Cargo.toml
naisu1-program/programs/mock-swap-pool/src/: lib.rs
naisu1-solver/: .env  REFACTOR_PLAN.md  test_parse  test_sui_addr.rs  test_sui_address.rs
naisu1-solver/src/: auction.rs  config.rs  main.rs  wormhole.rs
(+307 files in other folders)
