[package]
name = "naisu-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum          = { version = "0.8", features = ["ws", "macros"] }
tokio         = { version = "1", features = ["full"] }
tower-http    = { version = "0.6", features = ["cors"] }
dashmap       = "6"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tokio-stream  = { version = "0.1", features = ["sync"] }
futures       = "0.3"
async-stream  = "0.3"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender   = "0.2"
eyre          = "0.6"
color-eyre    = "0.6"
dotenvy       = "0.15"
uuid          = { version = "1", features = ["v4"] }
chrono        = { version = "0.4", features = ["serde"] }
hex           = "0.4"
alloy         = { version = "1", features = ["providers", "provider-ws", "transport-ws", "sol-types", "rpc-types", "contract", "reqwest", "k256"] }
reqwest       = { version = "0.12", features = ["json"] }
sqlx          = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "uuid"] }
bs58          = "0.5"
