[package]
name = "intent-solver"
version = "0.1.0"
edition = "2024"
default-run = "intent-solver"

[[bin]]
name = "intent-solver"
path = "src/main.rs"


[dependencies]
base64 = "0.22.1"
color-eyre = "0.6.5"
dotenvy = "0.15.7"
ethers = { version = "2.0.14", features = ["ws"] }
eyre = "0.6.12"
hex = "0.4.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shared_crypto = { git = "https://github.com/MystenLabs/sui.git", package = "shared-crypto" }
sui-json = { git = "https://github.com/MystenLabs/sui.git", package = "sui-json" }
sui-sdk = { git = "https://github.com/MystenLabs/sui.git", package = "sui-sdk" }
sui-types = { git = "https://github.com/MystenLabs/sui.git", package = "sui-types" }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2"
futures = "0.3.32"
bcs = "0.1.6"
sha2 = "0.10"
bs58 = "0.5"
ed25519-dalek = { version = "2", features = [] }
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
tokio-util = "0.7"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
axum = "0.7"
