[package]
name = "mock-liquid-staking"
version = "0.1.0"
description = "Mock liquid staking program for Naisu AI agent demo"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_liquid_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "mint", "associated_token"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
