[package]
name = "mock-swap-pool"
version = "0.1.0"
description = "Mock AMM swap pool for Naisu AI agent demo"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_swap_pool"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "mint", "associated_token"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
