[package]
name = "intent-bridge-solana"
version = "0.1.0"
description = "Intent Bridge for Solana - Cross-chain bridge with Dutch Auction"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "intent_bridge_solana"

[features]
default = ["devnet"]
devnet = ["wormhole-anchor-sdk/solana-devnet"]
mainnet = ["wormhole-anchor-sdk/mainnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
# ENABLE idl-build for anchor test
idl-build = ["anchor-lang/idl-build", "wormhole-anchor-sdk/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }

# Wormhole SDK
wormhole-anchor-sdk = { version = "0.30.1-alpha.3", default-features = false }

# Mock staking program (CPI)
mock-staking = { path = "../mock-staking", features = ["cpi"] }

# Force compatible versions to avoid edition2024 issues
blake3 = "=1.5.5"
constant_time_eq = "=0.3.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
